--- a/Day 7/index.html
+++ b/Day 7/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Web page</title>
-    <link rel="stylesheet" href="task2.css">
+    <title>Sample Web page with hover in Profile Image</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div><img src="images/logo.jpeg" alt="Logo"></div>
-        <p>Tiny Threads</p>
+        <div class="logoName">
+            <div><img src="logo.jpeg" alt="Logo"></div>
+            <p>Tiny Threads</p>
+        </div>
         <nav>
-            <p>About</p>
-            <p>Contact</p>
+            <ul>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
         </nav>
     </header>
     <section class="about">
-        <img src="images/profile.jpeg" alt="Profile Image">
-       <div> <h2 style="color: orchid;">About US</h2>
+        <div class="imgdiv"><img  class="image"src="profile.jpeg" alt="Profile Image"></div>
+       <div class="content"> <h2 style="color: orchid;">About US</h2>
         <p>At Tiny Threads, we bring fun, comfort, and style to kids' fashion. Our carefully curated collection offers trendy yet comfortable clothing designed to make your little ones look their best while feeling great. From playful outfits to everyday essentials, Tiny Threads is your go-to destination for fashionable and affordable kids' wear.</p></div>
     </section>
     <div class="line"></div>
@@ -27,7 +31,7 @@
          <p>Phone: +123-456-789</p>
     </section>
     <footer>
-        &copy;<p>2024 Tiny Threads. Made with</p>&hearts;
+        <pre>&copy; 2024 Tiny Threads. Made with <span class="heart">&hearts;</span></pre>
     </footer>
 </body>
 </html>
