--- a/Day 5/index.html
+++ b/Day 5/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNm7s1vJw4SHovkfKw8pOv71ZQTOMRrqEu3g&s" alt="Banner Image">
+        <img src="image.png" alt="Banner Image">
         <h1>Welcome to Our Website</h1>
     </header>
     <main>
